# netherite-algebra

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  bench_encoding.rs  bench_pairing.rs
src/: lib.rs
src/curve_bn254/curves/: g1.rs  g2.rs  mod.rs  tests.rs
src/curve_bn254/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs  tests.rs
src/curve_bn254/sage_scripts/: Fq.ipynb  Fq12.ipynb  Fq2.ipynb  Fq6.ipynb  Fr.ipynb  G1.ipynb  G2.ipynb  GLV.ipynb  NAF.ipynb  TwistQ.ipynb
src/curve_bn446/curves/: g1.rs  g2.rs  mod.rs  tests.rs
src/curve_bn446/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs  tests.rs
src/curve_bn446/sage_scripts/: Fq.ipynb  Fq12.ipynb  Fq2.ipynb  Fq6.ipynb  Fr.ipynb  G1.ipynb  G2.ipynb  GLV.ipynb  NAF.ipynb  TwistQ.ipynb
src/elgamal_encryption/: mod.rs
src/endomorphisms/: glv.rs  mod.rs
src/group_hashing/: mod.rs
src/message_encoding/: encoder.rs  hybrid.rs  mod.rs
src/message_encoding/sage/: parameters.ipynb
src/shacham_encryption/: mod.rs
src/wahby_boneh_map/sage_scripts/: BN254-Isogeny-Map.ipynb
